--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,72 +1,105 @@
-
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playwrite+IN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-
-*{
+/* ✅ Reset Styles */
+* {
     margin: 0;
     padding: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
-body{
+/* ✅ Body */
+body {
     margin: 0;
     background-color: white;
+    font-family: "Poppins", sans-serif;
 }
-.logo{
-    font-family: "Poppins", serif;
-    font-weight: 800;
-    font-style: normal;
-    font-size:1.5rem;
-    color:white;
-    margin-left:2rem;
 
-}
-.navbar{
-    background-color:black;
-    padding: 2rem;
+/* ✅ Navbar */
+.navbar {
+    /* margin-right:1rem; */
+    background-color: black;
+    padding: 1.5rem;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
+    align-items: center;
+    right:20px;
 }
-.nav-links,li{
-    display:flex;
-    gap:2.5rem;
-    text-decoration:none;
+
+/* ✅ Logo */
+.logo {
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 800;
+    margin-left: 2rem;
+}
+
+/* ✅ Navigation Links */
+.nav-links {
+    display: flex;
+    gap: 2.5rem;
     list-style: none;
-    text-decoration-style: none;
-
 }
-a{
+
+.nav-links a {
     text-decoration: none;
-    font-size:1.4rem;
-    color:white;
-    font-family: "Poppins", serif;
+    margin-right:2rem;
+    font-size: 1.4rem;
+    color: white;
     font-weight: 400;
-    font-style: normal;
     transition: 0.4s;
-    position:relative;
-    margin-right:3.5rem;
+    position: relative;
 }
 
-    a::after{
-        content:"";
-        position:absolute;
-        left:0;
-        bottom:-3px;
-        width:0%;
-        height: 2px;
-        background-color:white;
-        transition:width 0.4 ease-in-out;
+/* ✅ Hover Effect */
+.nav-links a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 0%;
+    height: 2px;
+    background-color: white;
+    transition: width 0.4s ease-in-out;
+}
 
-    }
-    a:hover{
-        color: rgb(115, 107, 107);
-    }
-
-    a:hover:after{
-        width:100%;
-    }
-/* a:hover{
+.nav-links a:hover {
     color: rgb(115, 107, 107);
-    text-decoration: underline;
-    text-underline-offset: 10px;
-} */
+}
+
+.nav-links a:hover::after {
+    width: 100%;
+}
+
+/* ✅ HAMBURGER MENU (Hidden by Default) */
+.hamburger {
+    display: none;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+    margin-right: 2rem;
+}
+
+/* ✅ RESPONSIVE NAVBAR */
+@media screen and (max-width: 768px) {
+    /* Hide Navigation Links */
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px; /* Adjust based on navbar height */
+        right: 0;
+        /* background-color: black; */
+        width: 100%;
+        text-align: center;
+        padding: 1rem 0;
+    }
+
+    /* Show Hamburger Icon */
+    .hamburger {
+        color: white;
+        /* display: block; */
+    }
+
+    /* When Active, Show Links */
+    .nav-links.active {
+        display: flex;
+    }
+}
