--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,105 +1,9 @@
-/* ✅ Reset Styles */
-* {
-    margin: 0;
-    padding: 0;
+/* *{
     box-sizing: border-box;
 }
 
-/* ✅ Body */
-body {
-    margin: 0;
-    background-color: white;
-    font-family: "Poppins", sans-serif;
-}
-
-/* ✅ Navbar */
-.navbar {
-    /* margin-right:1rem; */
-    background-color: black;
-    padding: 1.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    right:20px;
-}
-
-/* ✅ Logo */
-.logo {
-    font-size: 1.5rem;
-    color: white;
-    font-weight: 800;
-    margin-left: 2rem;
-}
-
-/* ✅ Navigation Links */
-.nav-links {
-    display: flex;
-    gap: 2.5rem;
-    list-style: none;
-}
-
-.nav-links a {
-    text-decoration: none;
-    margin-right:2rem;
-    font-size: 1.4rem;
-    color: white;
-    font-weight: 400;
-    transition: 0.4s;
-    position: relative;
-}
-
-/* ✅ Hover Effect */
-.nav-links a::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -3px;
-    width: 0%;
-    height: 2px;
-    background-color: white;
-    transition: width 0.4s ease-in-out;
-}
-
-.nav-links a:hover {
-    color: rgb(115, 107, 107);
-}
-
-.nav-links a:hover::after {
-    width: 100%;
-}
-
-/* ✅ HAMBURGER MENU (Hidden by Default) */
-.hamburger {
-    display: none;
-    font-size: 2rem;
-    color: white;
-    cursor: pointer;
-    margin-right: 2rem;
-}
-
-/* ✅ RESPONSIVE NAVBAR */
-@media screen and (max-width: 768px) {
-    /* Hide Navigation Links */
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px; /* Adjust based on navbar height */
-        right: 0;
-        /* background-color: black; */
-        width: 100%;
-        text-align: center;
-        padding: 1rem 0;
-    }
-
-    /* Show Hamburger Icon */
-    .hamburger {
-        color: white;
-        /* display: block; */
-    }
-
-    /* When Active, Show Links */
-    .nav-links.active {
-        display: flex;
-    }
-}
+body{
+    margin:0px;
+    padding:0px;
+    height: 200vh;
+} */
